[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sources/Main.gd" type="Script" id=1]
[ext_resource path="res://Sources/Character/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/tilesheet.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 64, 64, 0, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 64, 64, 0, 64, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=13]
0/name = "tilesheet.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 576, 192 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 480, 270 )

[node name="StartPosition2" type="Position2D" parent="."]
position = Vector2( 1320, 720 )

[node name="Character" parent="." instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 13 )
collision_mask = 15
format = 1
tile_data = PoolIntArray( 0, -536870912, 131072, 1, -536870912, 131075, 2, 1073741824, 2, 3, 1073741824, 2, 4, 1073741824, 2, 5, 1073741824, 2, 6, 1073741824, 2, 7, 1073741824, 2, 8, 1073741824, 2, 9, 1073741824, 2, 10, 1073741824, 2, 11, 1073741824, 2, 12, 1073741824, 2, 13, 1073741824, 2, 14, 1073741824, 2, 15, 1073741824, 2, 16, 1073741824, 2, 17, 1073741824, 2, 18, 1073741824, 2, 19, 1073741824, 2, 20, 1073741824, 2, 21, 1073741824, 2, 22, 1073741824, 2, 23, 1073741824, 2, 24, 1073741824, 2, 25, 1073741824, 2, 26, 1073741824, 2, 27, 1073741824, 2, 28, 1610612736, 131076, 29, 1610612736, 65536, 65536, -536870912, 131075, 65537, -536870912, 65539, 65564, 1610612736, 65540, 65565, 1610612736, 131076, 131072, -536870912, 2, 131101, -1073741824, 2, 196608, -536870912, 2, 196637, -1073741824, 2, 262144, -536870912, 2, 262173, -1073741824, 2, 327680, -536870912, 2, 327709, -1073741824, 2, 393216, -536870912, 2, 393245, -1073741824, 2, 458752, -536870912, 2, 458781, -1073741824, 2, 524288, -536870912, 2, 524317, -1073741824, 2, 589824, -536870912, 2, 589853, -1073741824, 2, 655360, -536870912, 2, 655389, -1073741824, 2, 720896, -536870912, 2, 720925, -1073741824, 2, 786432, -536870912, 2, 786461, -1073741824, 2, 851968, -536870912, 2, 851997, -1073741824, 2, 917504, -536870912, 2, 917533, -1073741824, 2, 983040, 0, 131076, 983041, 0, 65540, 983068, 0, 65539, 983069, 0, 131075, 1048576, 0, 65536, 1048577, 0, 131076, 1048578, 0, 2, 1048579, 0, 2, 1048580, 0, 2, 1048581, 0, 2, 1048582, 0, 2, 1048583, 0, 2, 1048584, 0, 2, 1048585, 0, 2, 1048586, 0, 2, 1048587, 0, 2, 1048588, 0, 2, 1048589, 0, 2, 1048590, 0, 2, 1048591, 0, 2, 1048592, 0, 2, 1048593, 0, 2, 1048594, 0, 2, 1048595, 0, 2, 1048596, 0, 2, 1048597, 0, 2, 1048598, 0, 2, 1048599, 0, 2, 1048600, 0, 2, 1048601, 0, 2, 1048602, 0, 2, 1048603, 0, 2, 1048604, 0, 131075, 1048605, 0, 131072 )
__meta__ = {
"_edit_lock_": true
}

[node name="Character2" parent="." instance=ExtResource( 2 )]
